--- a/res/drawable-hdpi/btn_shuffle.xml
+++ b/res/drawable-hdpi/btn_shuffle.xml
@@ -5,7 +5,8 @@
     <item android:drawable="@drawable/img_btn_shuffle_pressed"
         android:state_focused="false"
         android:state_pressed="true" />
-    <item android:drawable="@drawable/img_btn_shuffle_pressed" android:state_focused="true" />
+    <item android:drawable="@drawable/img_btn_shuffle_pressed" 
+        android:state_focused="true" />
     <item android:drawable="@drawable/img_btn_shuffle"
         android:state_focused="false"
         android:state_pressed="false" />
