--- a/res/layout/playlist_item.xml
+++ b/res/layout/playlist_item.xml
@@ -12,5 +12,5 @@
         android:layout_height="wrap_content"
         android:textSize="16dp"
         android:padding="10dp"
-        android:color="#f3f3f3"/>
+        android:color="#990099"/>
 </LinearLayout>
